# comp3314-asg3

./: .gitignore  README.md  RandomForrest.ipynb  cjlee.ipynb  cjlee2.ipynb  cjlee_hog.ipynb  cjlee_hog_64.ipynb  cjlee_hog_opencv_717 copy.ipynb  cjlee_hog_opencv_717.ipynb  cjlee_hog_opencv_717_compare.ipynb  cjlee_hog_opencv_717_v1.ipynb  cjlee_hog_v2.ipynb  final_notebook.ipynb  latest_notebook copy.ipynb  latest_notebook.ipynb  latest_notebook1.ipynb  main.py  notebook.ipynb  notebook1.ipynb  pyproject.toml  submission.csv  submission_hog_opencv_full.csv
submission/: submission.csv  submission_archive.csv  submission_hog_12_4_3_full.csv  submission_hog_opencv_full.csv  submission_hog_opencv_full_C12_.csv  submission_knn.csv  submission_svm1.csv  submission_team_lambda.csv
